Minor improvements to o.e.core.filebuffers.tests
Various cleanups and modernizations provoked by unstable test as can be
seen at https://download.eclipse.org/eclipse/downloads/drops4/I20260306-1800/testresults/html/org.eclipse.core.filebuffers.tests_ep440I-unit-linux-x86_64-java25_linux.gtk.x86_64_25.html